--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,10 @@
     <title>Home page</title>
 </head><input text="Co si chces koupit ?">
 <body>
+    <p>
+        <input type="button" value="ANO">
+        <input type="button" value="NE">
+    </p>
         <p>
             Michael Jackson Jn    </p>
         <button>kup to </button>
